--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/fssync.jar
+dist.jar=${dist.dir}/ftpsync.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
@@ -55,7 +55,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=fssync.FsSync
+main.class=ftpsync.FtpSync
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
