--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,7 +30,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.commons-net-1.4.1.classpath}
+    ${libs.commons-net-1.4.1.classpath}:\
+    ${libs.Samba-jcifs-1.3.18.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
