Replaced apache-commons by ftp4j

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,7 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.Samba-jcifs-1.3.18.classpath}:\
-    ${libs.commons-net-3.3.classpath}
+    ${libs.ftp4j-1.7.2.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
